--- a/package.json
+++ b/package.json
@@ -10,41 +10,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.0-next.0",
-    "@angular/common": "^14.0.0-next.0",
-    "@angular/compiler": "^14.0.0-next.0",
-    "@angular/core": "^14.0.0-next.0",
-    "@angular/forms": "^14.0.0-next.0",
-    "@angular/platform-browser": "^14.0.0-next.0",
-    "@angular/platform-browser-dynamic": "^14.0.0-next.0",
-    "@angular/router": "^14.0.0-next.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
+    "@angular/animations": "^14.2.1",
+    "@angular/common": "^14.2.1",
+    "@angular/compiler": "^14.2.1",
+    "@angular/core": "^14.2.1",
+    "@angular/forms": "^14.2.1",
+    "@angular/platform-browser": "^14.2.1",
+    "@angular/platform-browser-dynamic": "^14.2.1",
+    "@angular/router": "^14.2.1",
+    "rxjs": "~7.5.6",
+    "tslib": "^2.4.0",
+    "zone.js": "~0.11.8",
     "@molteni/export-csv": "^0.0.8",
-    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
-    "bootstrap": "^5.1.0",
-    "faker": "^5.5.3",
-    "jquery": "^3.6.0",
-    "jspdf": "^2.4.0",
-    "jspdf-autotable": "^3.5.20",
-    "ngx-pagination": "^5.1.1",
-    "node": "^16.17.0"
+    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "bootstrap": "^5.2.1",
+    "faker": "^6.6.6",
+    "jquery": "^3.6.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.25",
+    "ngx-pagination": "^6.0.2",
+    "angular-datatables": "^14.0.0",
+    "node": "^18.9.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.0",
-    "@angular/cli": "~14.2.0",
-    "@angular/compiler-cli": "^14.0.0-next.0",
-    "@types/jasmine": "~4.0.0",
-    "jasmine-core": "~4.3.0",
+    "@angular-devkit/build-angular": "^14.2.2",
+    "@angular/cli": "~14.2.2",
+    "@angular/compiler-cli": "^14.2.1",
+    "@types/jasmine": "~4.3.0",
+    "jasmine-core": "~4.4.0",
     "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.7.2",
-    "@types/datatables.net": "^1.10.20",
-    "@types/jquery": "^3.5.6",
-    "@types/node": "^12.11.1"
+    "typescript": "~4.8.3",
+    "@types/datatables.net": "^1.10.23",
+    "@types/jquery": "^3.5.14",
+    "@types/node": "^18.7.18"
   }
 }
